# django-microservices-ecommerce

./: .gitignore  README.MD  README_OLD.MD  docker-compose.yml  readme.html  style.css
api_gateway/: kong.yml  krakend.json
auth_service/: .gitignore  Auth Service API.yaml
auth_service/api/: Dockerfile  pyproject.toml  requirements.txt
auth_service/api/auth_service/: settings.py  urls.py
auth_service/api/users/: admin.py  models.py  serializers.py  urls.py  views.py
auth_service/api/users/migrations/: 0001_initial.py  0002_superuser.py
auth_service/envs/: db.default.env
cart_service/: Cart service API.yaml  README.MD
cart_service/api/: pyproject.toml
cart_service/api/cart/: models.py  serializers.py  urls.py  utils.py  views.py
cart_service/api/config/: settings.py  urls.py
cart_service/envs/: db.default.env
frontend/: Dockerfile  index.html  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx
product_service/: .gitignore  Product service API.yaml
product_service/api/: Dockerfile  pyproject.toml  requirements.txt
product_service/api/config/: settings.py  urls.py
product_service/api/products/: filters.py  mixins.py  models.py  paginators.py  permissions.py  serialziers.py  urls.py  utils.py  views.py  viewsets.py
product_service/api/products/migrations/: 0001_initial.py
product_service/envs/: db.default.env
review_service/: Reviews service API.yaml
review_service/api/: .dockerignore  Dockerfile  pyproject.toml
review_service/envs/: db.default.env
service_discovery/: Dockerfile  pyproject.toml  service_registrar.py
(+12 files in other folders)
