[tool.poetry]
name = "service discovery"
version = "0.1.0"
description = ""
authors = ["Blazej Bielski <bbielski@lyck.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
docker = "7.1.0"
requests = "2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
