[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = "auth microservice for users, authentication and authorization"
authors = ["blazej <bbielski@lyck.pl>"]
readme = "README.MD"

[tool.poetry.dependencies]
python = "^3.12"
Django = "5.1.2"
djangorestframework = "3.15.2"
djangorestframework-simplejwt = "5.3.1"
psycopg = "3.2.3"
django-debug-toolbar = "4.4.6"
drf-spectacular = "0.27.2"
dj-database-url = "2.3.0"
django-filter = "24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
